<resources>
    <string name="app_name">Superhero Quiz</string>
    <string name="question_one">1. Which of the following superheroes are members of the Justice League?</string>
    <string name="question_two">2. Justice League is from what comicbook line?</string>
    <string name="question_three">3. What is Marvels version of DCs Justice League?</string>
    <string name="question_four">4. Who is The Flash\'s biggest nemesis?</string>
    <string name="question_five">5. Who was called the flash?</string>

    <string name="answer_one_question_one">Batman</string>
    <string name="answer_two_question_one">Superman</string>
    <string name="answer_three_question_one">Iron Man</string>
    <string name="answer_four_question_one">Wonder Woman</string>

    <string name="answer_one_question_two">DC Comics</string>
    <string name="answer_two_question_two">Marvel Comics</string>
    <string name="answer_three_question_two">Neither</string>

    <string name="answer_one_question_four">Captain Cold</string>
    <string name="answer_two_question_four">Mirror Master</string>
    <string name="answer_three_question_four">Reverse Flash</string>
    <string name="answer_four_question_four">Gorilla Grodd</string>

    <string name="answer_one_question_five">Barry Allen</string>
    <string name="answer_two_question_five">Ralph Dibny</string>
    <string name="answer_three_question_five">Wally West</string>
    <string name="answer_four_question_five">Jay Garrick</string>

    <string name="question_hint">Answer</string>

    <string name="grade_test">Grade Test</string>

</resources>
